--- a/README
+++ b/README
@@ -4,3 +4,5 @@ dr_dre intercepts calls to render and redirect in ActionController and, if it
 detects multiple calls to render or redirect (triggering a DoubleRenderError),
 will drop a couple of lines into the output log identifying where the redirect
 or render calls were made from.
+
+Just use the gem and +include DrDre+ in any controllers you want to monitor.
