A note in the README

--- a/README
+++ b/README
@@ -5,4 +5,6 @@ detects multiple calls to render or redirect (triggering a DoubleRenderError),
 will drop a couple of lines into the output log identifying where the redirect
 or render calls were made from.
 
+It will also push a custom DoubleRenderError exception.
+
 Just use the gem and +include DrDre+ in any controllers you want to monitor.
